victoriametrics/base/service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "victoriametrics"
spec:
  selector:
    app: "victoriametrics"
  ports:
    - port: 8428
      name: "victoriametrics"
      targetPort: 8428
